--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,4 +1,4 @@
-TARGETS = frontendserver frontendlb
+TARGETS = frontendserver frontendlb loadbalancer
 
 all: $(TARGETS)
 
@@ -6,6 +6,9 @@ frontendserver: frontendserver.cc
 	g++ -std=c++17 $^ -lpthread -g -o $@
 
 frontendlb: frontendlb.cc
+	g++ -std=c++17 $^ -lpthread -g -o $@
+
+loadbalancer: loadbalancer.cc
 	g++ -std=c++17 $^ -lpthread -g -o $@
 
 clean::
