Add login/signup/home html pages, routes clean up

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -2,7 +2,7 @@ TARGETS = frontendserver loadbalancer
 
 all: $(TARGETS)
 
-frontendserver: frontendserver.cc
+frontendserver: frontendserver.cc routes.cc
 	g++ -std=c++17 $^ -lpthread -g -o $@
 
 loadbalancer: loadbalancer.cc
