Add backendmaster code, yet to implement shutdown mechanism and modularize the code

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,8 +1,11 @@
-TARGETS = backendserver
+TARGETS = backendserver masterbackendserver
 
 all: $(TARGETS)
 
 backendserver: backendserver.cc
+	g++ $^ -lpthread -g -o $@
+
+masterbackendserver: masterbackendserver.cc
 	g++ $^ -lpthread -g -o $@
 
 clean::
