Start on post send email

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -3,7 +3,9 @@ TARGETS = frontendserver loadbalancer
 all: $(TARGETS)
 
 frontendserver: frontendserver.cc routes.cc
-	g++ -std=c++17 $(shell pkg-config --cflags uuid) $^ $(shell pkg-config --libs uuid) -lpthread -g -o $@
+	g++ -std=c++17 $(shell pkg-config --cflags uuid) -I/usr/local/opt/openssl/include $^ $(shell pkg-config --libs uuid) -L/usr/local/opt/openssl/lib -lcrypto -lpthread -g -o $@
+
+	 
 
 loadbalancer: loadbalancer.cc
 	g++ -std=c++17 $^ -lpthread -g -o $@
